# BSplineCPP

./: BSplineCPPConfig.h.in  CMakeLists.txt  README.md  test.cpp
BSpline.xcodeproj/: project.pbxproj
BSpline.xcodeproj/project.xcworkspace/xcuserdata/tigakub.xcuserdatad/: UserInterfaceState.xcuserstate
BSpline.xcodeproj/xcuserdata/tigakub.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: BSpline.cpp  BSpline.hpp  CMakeLists.txt  Functor.cpp  Functor.hpp  Legendre.cpp  Legendre.hpp  Newton.cpp  Newton.hpp  Parametizer.cpp  Parametizer.hpp
